<resources>
    <string name="app_name">Compre Aqui</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nao_tem_registre_se"><u>Não tem conta? Registre-se!</u></string>
    <string name="log_in">Log In</string>
    <string name="carregando">Carregando…</string>
    <string name="aguarde">Aguarde.</string>
    <string name="crie_sua_conta">Crie sua conta</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="registrar">Registrar</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cpf">CPF</string>
    <string name="endereco">Endereço</string>
    <string name="salvar">Salvar</string>
    <string name="municipio">Município</string>
    <string name="fone">Fone</string>
    <string name="selecione_seu_estado">Selecione seu estado</string>
    <string name="erro">Oops!</string>
    <string name="salvando">Salvando…</string>
    <string name="cadastro_sucesso">Parabéns! Seu cadastro foi realizado com sucesso.</string>
    <string name="faca_login">Faça o login.</string>
    <string name="apagar_conta">Apagar Conta</string>
    <string name="logout">Logout</string>
    <string name="perfil_salvo_com_sucesso">Perfil salvo com sucesso!</string>
    <string name="apagando_conta">Apangando conta…</string>
    <string name="autenticando">Autenticando…</string>
    <string name="deseja_realmente_apagar_conta">Deseja realmente apagar a conta?</string>
    <string name="confirmacao">Confirmação</string>
    <string-array name="estados_array">
        <item>Selecione seu estado</item>
        <item>Acre (AC)</item>
        <item>Alagoas (AL)</item>
        <item>Amapá (AP)</item>
        <item>Amazonas (AM)</item>
        <item>Bahia (BA)</item>
        <item>Ceará (CE)</item>
        <item>Distrito Federal (DF)</item>
        <item>Espírito Santo (ES)</item>
        <item>Goiás (GO)</item>
        <item>Maranhão (MA)</item>
        <item>Mato Grosso (MT)</item>
        <item>Mato Grosso do Sul (MS)</item>
        <item>Minas Gerais (MG)</item>
        <item>Pará (PA)</item>
        <item>Paraíba (PB)</item>
        <item>Paraná (PR)</item>
        <item>Pernambuco (PE)</item>
        <item>Piauí (PI)</item>
        <item>Rio de Janeiro (RJ)</item>
        <item>Rio Grande do Norte (RN)</item>
        <item>Rio Grande do Sul (RS)</item>
        <item>Rondônia (RO)</item>
        <item>Roraima (RR)</item>
        <item>Santa Catarina (SC)</item>
        <item>São Paulo (SP)</item>
        <item>Sergipe (SE)</item>
        <item>Tocantins (TO)</item>


    </string-array>
</resources>
