<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.autenticar.AutenticarActivity">

    <data>

        <variable
            name="viewModel"
            type="com.github.kenyamoura.compreaqui.view.autenticar.AutenticarViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/cpf_txt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.emailField}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/senha_txt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:text="@={viewModel.senhaField}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpf_txt" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:background="?attr/actionModeSplitBackground"
            android:onClick="onLoginClick"
            android:text="@string/log_in"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/senha_txt" />

        <TextView
            android:id="@+id/registre_link"
            android:layout_width="227dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/nao_tem_registre_se"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:textColor="@android:color/holo_blue_dark"
            android:onClick="onCriarContaClick"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            tools:layout_editor_absoluteX="79dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="138dp"
            android:layout_marginLeft="138dp"
            android:layout_marginRight="138dp"
            android:layout_marginStart="138dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_foreground" />
    </android.support.constraint.ConstraintLayout>
</layout>