<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.github.kenyamoura.compreaqui.view.cadastro.CadastroViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.cadastro.CadastroActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/crie_sua_conta"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nome_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/nome_completo"
            android:inputType="textPersonName"
            android:text="@={viewModel.nomeField}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="11dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="11dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/nome_txt"
            app:layout_constraintEnd_toStartOf="@+id/nome_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nome_txt"
            app:srcCompat="@drawable/ic_avatar" />

        <EditText
            android:id="@+id/cpf_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.emailField}"
            app:layout_constraintEnd_toEndOf="@+id/nome_txt"
            app:layout_constraintStart_toStartOf="@+id/nome_txt"
            app:layout_constraintTop_toBottomOf="@+id/nome_txt" />

        <EditText
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:text="@={viewModel.senhaField}"
            app:layout_constraintEnd_toEndOf="@+id/cpf_txt"
            app:layout_constraintStart_toStartOf="@+id/cpf_txt"
            app:layout_constraintTop_toBottomOf="@+id/cpf_txt" />

        <EditText
            android:id="@+id/endereco_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/confirmar_senha"
            android:inputType="textPassword"
            android:text="@={viewModel.confirmarSenhaField}"
            app:layout_constraintEnd_toEndOf="@+id/email_txt"
            app:layout_constraintStart_toStartOf="@+id/email_txt"
            app:layout_constraintTop_toBottomOf="@+id/email_txt" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="11dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="11dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/cpf_txt"
            app:layout_constraintEnd_toStartOf="@+id/cpf_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cpf_txt"
            app:srcCompat="@drawable/ic_mail" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="11dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="11dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/email_txt"
            app:layout_constraintEnd_toStartOf="@+id/email_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/email_txt"
            app:srcCompat="@drawable/ic_lock1" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="11dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="11dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/endereco_txt"
            app:layout_constraintEnd_toStartOf="@+id/endereco_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/endereco_txt"
            app:srcCompat="@drawable/ic_lock2" />

        <Button
            android:id="@+id/registrar_btn"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/design_default_color_primary_dark"
            android:onClick="onRegistrarClick"
            android:text="@string/registrar"
            android:textAllCaps="false"
            android:textColor="@color/ic_launcher_background"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endereco_txt" />


    </android.support.constraint.ConstraintLayout>
</layout>